--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ project(asteroids)
 
 set(CMAKE_CXX_STANDARD 17)
 
+SET (CMAKE_C_COMPILER_WORKS 1)
+SET (CMAKE_CXX_COMPILER_WORKS 1)
+
 if (WIN32)
     set(CMAKE_CXX_COMPILER cl)
-    # TODO: add msvc equivalents for unix flags
 else()
     set(CMAKE_CXX_COMPILER clang++)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -s")
